--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 target
 .DS_Store
-*.svg
-*libdm_shredmaster.so
-*libdm_shredmaster.dylib
-*libdm_shredmaster.dll
+flamegraph.svg
+lv2/**/*.so
+lv2/**/*.dylib
+lv2/**/*.dll
